--- a/my-react-course/11-practice-components/Exercise-1/scss/style.scss
+++ b/my-react-course/11-practice-components/Exercise-1/scss/style.scss
@@ -1,10 +1,3 @@
-label {
-    display: block;
-}
-
-label input {
-    width: 50vw;
-}
 
 main {
     display: flex;
@@ -12,23 +5,31 @@ main {
     align-items: center;
     background-color: black;
     height: 100vh;
-}
+    
+    h1 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 30vh;
+        font-size: 5rem;
+        color: white;
+    }
 
-.inputsContainer {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
-   background-color: tomato;
-   height: 70vh;
-   width: 100vw;
-}
+    div.inputsContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: tomato;
+        height: 70vh;
+        width: 100vw;
+                
+        label {
+            display: block;
 
-h1 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 30vh;
-    font-size: 5rem;
-    color: white;
+            input {
+                width: 50vw;
+            }
+        }
+    }
 }
